<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activityRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_2_dp">

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="@dimen/common_40_dp"
            android:layout_height="@dimen/common_40_dp"
            android:src="@drawable/ic_profile"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/logout"></TextView>

    </LinearLayout>


    <com.sen.cooey.widget.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/common_15_dp"
        android:layout_marginTop="@dimen/common_30_dp"
        android:layout_marginRight="@dimen/common_15_dp"
        android:layout_marginBottom="@dimen/common_30_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/common_15_dp"
            android:gravity="center"

            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textViewRegTitle"
                style="@style/TitleBigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_5_dp"
                android:text="@string/app_name"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/textViewRegSubTitle"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/common_10_dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="normal" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/common_10_dp"
                    android:paddingRight="@dimen/common_10_dp">


                    <!--NAME -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/hint_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/common_15_dp"
                            android:layout_marginTop="@dimen/common_20_dp"
                            android:layout_marginRight="@dimen/common_15_dp"
                            android:background="@drawable/bg_round_border_rectangle"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/common_10_dp"
                            android:paddingTop="@dimen/common_10_dp"
                            android:paddingRight="@dimen/common_10_dp"
                            android:paddingBottom="@dimen/common_10_dp"
                            android:textColor="@color/text_color_green" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!--EMAIL -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:textColorHint="@color/hint_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/common_15_dp"
                            android:layout_marginTop="@dimen/common_20_dp"
                            android:layout_marginRight="@dimen/common_15_dp"
                            android:background="@drawable/bg_round_border_rectangle"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"

                            android:maxLength="50"
                            android:paddingLeft="@dimen/common_10_dp"
                            android:paddingTop="@dimen/common_10_dp"
                            android:paddingRight="@dimen/common_10_dp"
                            android:paddingBottom="@dimen/common_10_dp"
                            android:textColor="@color/text_color_green" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--PASSWORD -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/hint_color"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/common_15_dp"
                            android:layout_marginTop="@dimen/common_20_dp"
                            android:layout_marginRight="@dimen/common_15_dp"
                            android:background="@drawable/bg_round_border_rectangle"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/common_10_dp"
                            android:paddingTop="@dimen/common_10_dp"
                            android:paddingRight="@dimen/common_10_dp"
                            android:paddingBottom="@dimen/common_10_dp"
                            android:textColor="@color/text_color_green" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!--DOB -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:textColorHint="@color/hint_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextDob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/common_15_dp"
                            android:layout_marginTop="@dimen/common_20_dp"
                            android:layout_marginRight="@dimen/common_15_dp"
                            android:background="@drawable/bg_round_border_rectangle"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/dob"
                            android:inputType="date"
                            android:maxLength="50"
                            android:paddingLeft="@dimen/common_10_dp"
                            android:paddingTop="@dimen/common_10_dp"
                            android:paddingRight="@dimen/common_10_dp"
                            android:paddingBottom="@dimen/common_10_dp"
                            android:textColor="@color/text_color_green" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <!--Gender -->

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_15_dp"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:layout_marginRight="@dimen/common_15_dp"
                        android:autofillHints="@string/gender"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/common_2_dp"
                            android:text="@string/gender"
                            android:textColor="@color/colorPrimary"></TextView>

                        <RadioButton
                            android:id="@+id/radioButtonMale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textColor="@color/text_color_green" />

                        <RadioButton
                            android:id="@+id/radioButtonFemale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/female"
                            android:textColor="@color/text_color_green" />


                    </RadioGroup>


                    <!--BUTTON -->
                    <Button
                        android:id="@+id/buttonRegister"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/common_10_dp"
                        android:padding="@dimen/common_10_dp"
                        android:text="@string/go"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textViewExistingUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/common_10_dp"
                        android:text="@string/existing_user"
                        android:textColor="@color/colorAccent"></TextView>

                </LinearLayout>


            </ScrollView>
        </LinearLayout>

    </com.sen.cooey.widget.NeumorphCardView>

</RelativeLayout>


