<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activityRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/common_15_dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            style="@style/TitleBigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_5_dp"
            android:text="@string/app_name"
            android:textAllCaps="false" />

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_20_dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="normal" />

    </LinearLayout>

    <com.sen.cooey.widget.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/common_5_dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_10_dp"
            android:paddingRight="@dimen/common_10_dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_15_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:layout_marginRight="@dimen/common_15_dp"
                    android:background="@drawable/bg_round_border_rectangle"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"

                    android:maxLength="50"
                    android:paddingLeft="@dimen/common_10_dp"
                    android:paddingTop="@dimen/common_10_dp"
                    android:paddingRight="@dimen/common_10_dp"
                    android:paddingBottom="@dimen/common_10_dp"
                    android:textColor="@color/text_color_green" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:hint="@string/password"
                android:textColorHint="@color/hint_color"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_15_dp"
                    android:layout_marginTop="@dimen/common_20_dp"
                    android:layout_marginRight="@dimen/common_15_dp"
                    android:background="@drawable/bg_round_border_rectangle"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:paddingLeft="@dimen/common_10_dp"
                    android:paddingTop="@dimen/common_10_dp"
                    android:paddingRight="@dimen/common_10_dp"
                    android:paddingBottom="@dimen/common_10_dp"
                    android:textColor="@color/text_color_green" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/go"
                android:textSize="18dp" />
        </LinearLayout>


    </com.sen.cooey.widget.NeumorphCardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_10_dp"
            android:text="@string/new_user"
            android:textColor="@color/colorAccent"></TextView>
    </LinearLayout>
</LinearLayout>


